--- a/css/main.css
+++ b/css/main.css
@@ -1,364 +1,1 @@
-:root {
-  --main-color: #004889;
-  --main-pass: #e6bd0f;
-}
-body {
-  margin: 0;
-  padding: 0;
-    font-family: "Tajawal", sans-serif;
-
-}
-.main-font {
-  font-size: 17px;
-}
-label {
-  font-weight: bold;
-}
-.main-btn {
-  width: 290px;
-  border-radius: 35px 35px;
-  padding: 8px;
-  border: none;
-  color: #fff;
-  background-color: var(--main-color);
-  outline: none;
-}
-/* ///index page// */
-.login {
-  padding: 20px 0;
-}
-.img-logo img {
-  max-width: 100px;
-  width: 100%;
-}
-.logo-home img {
-  width: 100%;
-  max-width: 600px;
-}
-.text-form a {
-  color: var(--main-pass);
-  font-weight: 400;
-  font-size: 15px;
-}
-.group-input {
-  margin: auto;
-}
-.group-input input {
-  width: 300px;
-  padding: 8px;
-  border-radius: 35px 35px;
-  border: none;
-  background-color: #f1f1f1;
-  outline: none;
-}
-.group-input input::placeholder {
-  font-size: 14px;
-  font-weight: 500;
-  padding: 0 22px;
-}
-.contcform {
-  top: 43%;
-  right: 17%;
-  color: #86888a;
-}
-.forget-pass a {
-  font-size: 13px;
-  text-decoration: none;
-  font-weight: 500;
-}
-.link-footer {
-  font-size: 13px;
-  margin-top: 50px;
-}
-
-.link-footer a {
-  text-decoration: none;
-  color: #b6b6b6;
-  font-weight: 500;
-}
-.icon-child {
-  width: 25px;
-  height: 25px;
-  border-radius: 50%;
-  background-color: #c5c5c5;
-}
-.text-copy p {
-  font-size: 13px;
-  color: #c5c5c5;
-  font-weight: 700;
-}
-.icon-child i {
-  color: #fff;
-  cursor: pointer;
-  color: #fff;
-  cursor: pointer;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 5px;
-}
-.nots textarea {
-  margin: auto !important;
-}
-
-/* ///create accounte page// */
-.create {
-  padding: 20px 0;
-}
-.create-logo a {
-  color: var(--main-pass);
-  font-size: 15px;
-}
-.new-tap div {
-  border: 1px solid #ddd;
-  padding: 7px 15px;
-  border-radius: 35px 35px;
-}
-.new-tap div:active {
-  background-color: #004889;
-  color: #fff;
-  font-size: 15px;
-}
-.active {
-  background-color: #004889;
-  color: #fff;
-  font-size: 15px;
-}
-.mobile-number-container {
-  width: 300px;
-  padding: 5px;
-  border-radius: 35px 35px;
-  border: none;
-  background-color: #f1f1f1;
-  outline: none;
-  display: flex;
-  direction: ltr;
-  align-items: center;
-}
-
-.country-code {
-  display: flex;
-  align-items: center;
-  padding: 0 10px;
-  color: #b6b6b6;
-}
-
-.country-code img {
-  width: 20px;
-  height: 20px;
-  margin-right: 5px;
-}
-
-.country-code span {
-  font-size: 14px;
-}
-
-.mobile-input {
-  border: none;
-  outline: none;
-  flex: 1;
-  font-size: 14px;
-}
-
-.mobile-label {
-  font-size: 14px;
-  margin-top: 10px;
-  display: flex;
-  font-weight: bold;
-}
-.btn-follow a {
-  width: 160px;
-  border: none;
-  border-radius: 35px 35px;
-  outline: none;
-  border: 2px solid var(--main-color);
-  display: block;
-  margin: auto;
-  color: #fff;
-  text-decoration: none;
-  padding: 10px 30px;
-  background-color: var(--main-color);
-}
-.polic-text a {
-  color: var(--main-pass);
-  font-size: 16px;
-}
-.descritoin-policy p {
-  font-size: 13px;
-  font-weight: bold;
-  color: #7f7f7f;
-}
-.modal-header {
-  border-bottom: none;
-}
-/* ///location page// */
-.form-select {
-  width: 300px;
-  padding: 14px !important;
-  border-radius: 35px 35px;
-  border: none;
-  background-color: #f1f1f1;
-  outline: none;
-  display: flex;
-  direction: ltr;
-  align-items: center;
-}
-input[type="file" i] {
-  border-radius: 4px !important;
-  color: #86888a;
-}
-#fileInput::before {
-  content: "اضافة صورة";
-}
-.custom-file-upload {
-  display: inline-block;
-  padding: 10px 25px;
-  font-size: 14px;
-  cursor: pointer;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  color: #b6b6b6;
-  border-radius: 35px 35px;
-  background-color: #dcdcdc;
-}
-
-.custom-file-upload input[type="file"] {
-  display: none;
-}
-.nots textarea {
-  width: 600px;
-  height: 120px;
-  padding: 14px !important;
-  border-radius: 30px 30px;
-  border: none;
-  background-color: #f1f1f1;
-  outline: none;
-  display: flex;
-  resize: none;
-  direction: rtl;
-  align-items: center;
-}
-.form-select {
-  --bs-form-select-bg-img: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m2 5 6 6 6-6'/%3e%3c/svg%3e");
-  background-position: left 0.75rem center;
-}
-select option {
-  direction: rtl;
-}
-/* ///time page// */
-.time-picker {
-  display: flex;
-  align-items: center;
-  /* flex-wrap: wrap; */
-  justify-content: center;
-  gap: 10px;
-  padding: 10px 20px;
-  border-radius: 8px;
-}
-
-.day-checkbox {
-  display: flex;
-  align-items: center;
-  margin-left: 10px;
-  position: relative;
-}
-
-.day-checkbox input[type="checkbox"] {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  margin: 0 6px;
-  width: 20px;
-  height: 20px;
-  border: 2px solid #c1841b;
-  border-radius: 4px;
-  background-color: #c1841b;
-  cursor: pointer;
-  position: relative;
-}
-
-.day-checkbox input[type="checkbox"]:checked::before {
-  content: "\f00c";
-  font-family: "Font Awesome 5 Free";
-  font-weight: 900;
-  display: block;
-  color: #fff;
-  font-size: 14px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-.day-checkbox label {
-  margin-left: 5px;
-  cursor: pointer;
-}
-.time-input {
-  display: flex;
-  align-items: center;
-  margin-left: 10px;
-}
-
-.time-input label {
-  margin-left: 5px;
-}
-
-.time-input input[type="time"] {
-  background-color: #f1f1f1;
-  border: none;
-  border-radius: 35px 35px;
-  padding: 12px;
-  outline: none;
-  width: 200px;
-  text-align: center;
-}
-/* ///finshe page// */
-.icon-check i {
-  color: #4bd12a;
-  font-size: 80px;
-}
-.check-finshe {
-  padding: 30px 0;
-}
-.check-finshe p {
-  font-size: 13px;
-}
-.btn-finsh {
-  width: 300px;
-  background-color: var(--main-color);
-  text-align: center;
-  border-radius: 35px 35px;
-  padding: 7px;
-  cursor: pointer;
-}
-.btn-finsh a {
-  outline: none;
-  border: none;
-  cursor: pointer;
-}
-
-/* //////////////////////////////////////////////////////////////// */
-/* //media-screen// */
-@media (max-width: 477px) {
-  .logo-home {
-    display: none;
-  }
-  .nots textarea {
-    width: 300px !important;
-  }
-  .group-btns {
-    flex-direction: column;
-    align-items: center;
-  }
-  .footer {
-    flex-direction: column-reverse;
-    align-items: center;
-  }
-  .time-picker {
-    flex-direction: column;
-  }
-  .check-finshe p {
-    font-size: 12px;
-  }
-}
-/* /////////////finsh//////////////////// */
+:root{--main-color:#004889;--main-pass:#e6bd0f}body{margin:0;padding:0;font-family:tajawal,sans-serif}.main-font{font-size:17px}label{font-weight:700}.main-btn{width:290px;border-radius:35px 35px;padding:8px;border:none;color:#fff;background-color:var(--main-color);outline:none}.login{padding:20px 0}.img-logo img{max-width:100px;width:100%}.logo-home img{width:100%;max-width:600px}.text-form a{color:var(--main-pass);font-weight:400;font-size:15px}.group-input{margin:auto}.group-input input{width:300px;padding:8px;border-radius:35px 35px;border:none;background-color:#f1f1f1;outline:none}.group-input input::placeholder{font-size:14px;font-weight:500;padding:0 22px}.contcform{top:43%;right:17%;color:#86888a}.forget-pass a{font-size:13px;text-decoration:none;font-weight:500}.link-footer{font-size:13px;margin-top:50px}.link-footer a{text-decoration:none;color:#b6b6b6;font-weight:500}.icon-child{width:25px;height:25px;border-radius:50%;background-color:#c5c5c5}.text-copy p{font-size:13px;color:#c5c5c5;font-weight:700}.icon-child i{color:#fff;cursor:pointer;color:#fff;cursor:pointer;display:flex;justify-content:center;align-items:center;padding:5px}.nots textarea{margin:auto!important}.create{padding:20px 0}.create-logo a{color:var(--main-pass);font-size:15px}.new-tap div{border:1px solid #ddd;padding:7px 15px;border-radius:35px 35px}.new-tap div:active{background-color:#004889;color:#fff;font-size:15px}.active{background-color:#004889;color:#fff;font-size:15px}.mobile-number-container{width:300px;padding:5px;border-radius:35px 35px;border:none;background-color:#f1f1f1;outline:none;display:flex;direction:ltr;align-items:center}.country-code{display:flex;align-items:center;padding:0 10px;color:#b6b6b6}.country-code img{width:20px;height:20px;margin-right:5px}.country-code span{font-size:14px}.mobile-input{border:none;outline:none;flex:1;font-size:14px}.mobile-label{font-size:14px;margin-top:10px;display:flex;font-weight:700}.btn-follow a{width:160px;border:none;border-radius:35px 35px;outline:none;border:2px solid var(--main-color);display:block;margin:auto;color:#fff;text-decoration:none;padding:10px 30px;background-color:var(--main-color)}.polic-text a{color:var(--main-pass);font-size:16px}.descritoin-policy p{font-size:13px;font-weight:700;color:#7f7f7f}.modal-header{border-bottom:none}.form-select{width:300px;padding:14px!important;border-radius:35px 35px;border:none;background-color:#f1f1f1;outline:none;display:flex;direction:ltr;align-items:center}input[type=file i]{border-radius:4px!important;color:#86888a}#fileInput::before{content:"Ø§Ø¶Ø§ÙØ© ØµÙˆØ±Ø©"}.custom-file-upload{display:inline-block;padding:10px 25px;font-size:14px;cursor:pointer;border:1px solid #ccc;border-radius:5px;color:#b6b6b6;border-radius:35px 35px;background-color:#dcdcdc}.custom-file-upload input[type=file]{display:none}.nots textarea{width:600px;height:120px;padding:14px!important;border-radius:30px 30px;border:none;background-color:#f1f1f1;outline:none;display:flex;resize:none;direction:rtl;align-items:center}.form-select{--bs-form-select-bg-img:url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m2 5 6 6 6-6'/%3e%3c/svg%3e");background-position:.75rem}select option{direction:rtl}.time-picker{display:flex;align-items:center;justify-content:center;gap:10px;padding:10px 20px;border-radius:8px}.day-checkbox{display:flex;align-items:center;margin-left:10px;position:relative}.day-checkbox input[type=checkbox]{-webkit-appearance:none;-moz-appearance:none;appearance:none;margin:0 6px;width:20px;height:20px;border:2px solid #c1841b;border-radius:4px;background-color:#c1841b;cursor:pointer;position:relative}.day-checkbox input[type=checkbox]:checked::before{content:"\f00c";font-family:"font awesome 5 free";font-weight:900;display:block;color:#fff;font-size:14px;position:absolute;top:50%;left:50%;transform:translate(-50%,-50%)}.day-checkbox label{margin-left:5px;cursor:pointer}.time-input{display:flex;align-items:center;margin-left:10px}.time-input label{margin-left:5px}.time-input input[type=time]{background-color:#f1f1f1;border:none;border-radius:35px 35px;padding:12px;outline:none;width:200px;text-align:center}.icon-check i{color:#4bd12a;font-size:80px}.check-finshe{padding:30px 0}.check-finshe p{font-size:13px}.btn-finsh{width:300px;background-color:var(--main-color);text-align:center;border-radius:35px 35px;padding:7px;cursor:pointer}.btn-finsh a{outline:none;border:none;cursor:pointer}@media(max-width:477px){.logo-home{display:none}.nots textarea{width:300px!important}.group-btns{flex-direction:column;align-items:center}.footer{flex-direction:column-reverse;align-items:center}.time-picker{flex-direction:column}.check-finshe p{font-size:12px}}
